sample/asm/errors/no_end_between_defs.asm
.function: foo
    end
; below should be .end and not .def
.def

.function: main
    izero 0
    end
.end
